# Theory

./: .gitignore  A2A_Protocol.json  Adblock_Usage_Guide.markdown  Edge_fix.cmd  Edge_fix2.cmd  Flag_suspected_lagswitch.py  Hash_Generator.html  Helsinki 2024 Data Breach Investigation.md  IP Grabber with Flask.py  Kolikonheitto.java  MFA_Implementation_Guide_2025.markdown  Matrix_Rain.adb  Microsoft’s Digital Escort Program,md  Microsoft’s Digital Escort Program.md  NotPetya theory  Old PHP IP Grabber Code.php  README.md  Salt Typhoon Confirmed Attacks Analysis.markdown  Salt Typhoon Cyberattack Analysis.md  The Conficker Worm.md  fix_crypti.md  lagswitch.py  malware_detection_polymorph_demo.py  photo_converter.html  poker.py  puhe_ymmärrys.py  youtube_downloader.py
Analyses/: Adblock_Usage_Guide.markdown  (+18 more)
verifiable-trust-stack/: .gitignore  PROTOTYPE_PLAN.md  README.md  THEORY.md  pyproject.toml
verifiable-trust-stack/examples/honest_agent/: agent.py
verifiable-trust-stack/examples/poisoned_data/: pipeline.py
verifiable-trust-stack/examples/rogue_agent/: agent.py
verifiable-trust-stack/glue/: __init__.py  align_to_spec.py  policy_to_align.py  proof_to_policy.py  spec_to_proof.py  types.py
verifiable-trust-stack/layers/01_provenance/: provenance.py
verifiable-trust-stack/layers/02_specification/: specification.py
verifiable-trust-stack/tests/: test_formal.py  test_pipeline.py
verifiable-trust-stack/verified_doom/: attack_scenarios.py
verifiable-trust-stack/vts/: __init__.py  __main__.py  formal.py  mock_components.py  pipeline.py  scenarios.py
(+3150 files in other folders)
